tests/cases/conformance/decorators/invalid/decoratorOnEnum.ts
declare function dec<T>(target: T): T;

@dec
enum E {
}